tooling/nargo_cli/tests/snapshots/execution_success/regression_8009/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn main(start: i64, end: i64) -> pub u32 {
    let start: i64 = start % 5;
    let end: i64 = end % 5;
    let mut sum: u32 = 0;
    for i in start..end {
        sum = sum + 1;
    }
    sum
}
